namespaces/velero/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    namespace: velero
